fix over top spacing

--- a/themes/book/assets/_custom.scss
+++ b/themes/book/assets/_custom.scss
@@ -140,10 +140,14 @@ ul.supported-on {
   padding:0px;
 }
 
+#TableOfContents {
+  top:70px;
+}
+
 .book-menu nav,
 .book-toc nav,
 .book-page  {
-  padding-top: 170px;
+  padding-top: 100px;
 }
 
 .book-menu nav {
